--- a/DecodeCollective/projects/swapper.html
+++ b/DecodeCollective/projects/swapper.html
@@ -107,9 +107,10 @@
     <!-- <div class="free-space dark-background"></div> -->
     <div class="dark-background"><section class="show-on-scroll transparent" status='fade-in' id="sw-full-image3">
     </section></div> 
-    
+    <div class="free-space dark-background"></div>
     <div class="dark-background"><section class="show-on-scroll transparent" status='fade-in' id="sw-full-image2">
     </section></div>   
+    <div class="free-space dark-background"></div>
     <div class="dark-background"><section class="show-on-scroll transparent" status='fade-in' id="sw-full-image1"> </section></div>
 
     <div class="project-title">
