--- a/DecodeCollective/projects/rawbot.html
+++ b/DecodeCollective/projects/rawbot.html
@@ -192,7 +192,7 @@
 
 
     <div class="next-project next-project-gi">
-        <h2</p>Next Project</h2>
+        <h2>Next Project</h2>
     </div>
     <div class="next-project-gap">
         <a class="full-a" href="geospatialinfographics.html"></a>
