(feat):popup description

--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -17,7 +17,7 @@
   <div>
 
     <!-- Landing media -->
-    <section data-title="Decode Creative Technologies Home" class="scroll-item" index="1">
+    <section data-title="Decode Creative Technologies Home"  index="1">
       <div class="generic-wrapper">
 
         <div class="navbar">
@@ -28,12 +28,12 @@
           </a>
           </div>
           <nav class="menu" id="siteNav">
-            <ul>
-              
-              <li><a href="projects.html">Projects.</a></li>
-              <li><a  href="about.html" class="inactiveLink">About.</a></li>
-              <li><a  href="contact.html">Contact.</a></li>
-            </ul>
+            <a href="projects.html" >Projects.</a>
+            <a href="about.html" class="inactiveLink">About.</a>
+            <a href="contact.html">Contact.</a>
+            <a href="javascript:void(0);" class="icon">
+              <i class="fa fa-bars"></i>
+            </a>
           </nav>
         </div>
 
