--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -535,38 +535,38 @@
     <ul class="grid">
       <li>
         <a href="#">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/74321/fvazbu6zae-andrew-neel-776x517.jpg" alt=""
+          <img src="./images/optimized/infrared_medium.webp" alt=""
             loading="lazy">
           <span class="project-title" id="infrared">InFraReD</span>
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="./images/perceptiveDatascapes/pctop.png" alt="" loading="lazy">
+          <img src="./images/optimized/perspective_datascapes_medium.webp" alt="" loading="lazy">
           <span class="project-title" id="perceptive-datascapes">Perceptive Datascapes</span>
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="./images/rawbot/render-prj.png" alt="">
+          <img src="./images/optimized/Rawbot_medium.webp" alt="">
           <span class="project-title" id="rawbot">Rawbot</span>
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="./images/geospatialInfographics/dataAnalytics.png" alt="" loading="lazy">
+          <img src="./images/optimized/ligthing_medium.webp" alt="" loading="lazy">
           <span class="project-title" id="geospatial">Geospatial Infographics</span>
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="./images/swapper/Screenshot 1(36).png" alt="" loading="lazy">
+          <img src="./images/optimized/Swapper(36)_medium.webp" alt="" loading="lazy">
           <span class="project-title" id="swapper">Swapper</span>
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="./images/urbanGrowth/Picture2.png" alt="" loading="lazy">
+          <img src="./images/optimized/frames_medium.webp" alt="" loading="lazy">
           <span class="project-title" id="urban-growth">Urban Growth</span>
         </a>
       </li>
