(feat): project popup

--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -8,7 +8,9 @@
 
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">  
   <link rel="stylesheet" href="styles/Style.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
 </head>
 
@@ -29,7 +31,7 @@
           </div>
           <nav class="menu" id="siteNav">
             <a href="projects.html" >Projects.</a>
-            <a href="about.html" class="inactiveLink">About.</a>
+            <a href="about.html" >About.</a>
             <a href="contact.html">Contact.</a>
             <a href="javascript:void(0);" class="icon">
               <i class="fa fa-bars"></i>
@@ -50,8 +52,12 @@
         </div>
 
         <div class="mid-grid">
-          <h1 style="color: white;">We are Decode Creative</h1>
-          <h3>a computational design and creativity studio.</h3>
+          <div style="display: flex; align-items: baseline;">
+            <h1 style="color: white; font-weight: 400; font-size: 5vw">we are &nbsp;</h1>
+            <h1 style="color: white; font-weight: bold; font-size: 6vw">Decode Creative</h1>
+          </div>
+         
+          <h3 style="font-weight: 300; font-size: large;">a computational design and creativity studio.</h3>
 
         </div>
 
