--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -53,8 +53,8 @@
 
         <div class="mid-grid">
           <div style="display: flex; align-items: baseline;">
-            <h1 style="color: white; font-weight: 400; font-size: 5vw">we are &nbsp;</h1>
-            <h1 style="color: white; font-weight: bold; font-size: 6vw">Decode Creative</h1>
+            <h1 style="color: white; font-weight: 400; font-size: 4vw">we are &nbsp;</h1>
+            <h1 style="color: #e4ff00; font-weight: bold; font-size: 5vw">Decode Creative</h1>
           </div>
          
           <h3 style="font-weight: 300; font-size: large;">a computational design and creativity studio.</h3>
