--- a/DecodeCollective/about.html
+++ b/DecodeCollective/about.html
@@ -10,8 +10,7 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="styles/projects.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- Fonts -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> -->
+  <!-- Fonts -->  
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -521,7 +520,7 @@
         </div>
         <nav class="menu" id="siteNav">
           <a href="projects.html">Projects.</a>
-          <a href="about.html" >About.</a>
+          <a href="about.html">About.</a>
           <a href="contact.html">Contact.</a>
           <a href="javascript:void(0);" class="icon">
             <i class="fa fa-bars"></i>
@@ -530,8 +529,21 @@
       </div>
     </div>
   </div>
- 
 
+  <section>
+    <div style="display: flex; align-items: baseline;">
+      <h1 style="color: white; font-weight: 400; font-size: 5vw">we are &nbsp;</h1>
+      <h1 style="color: white; font-weight: bold; font-size: 6vw">Decode Creative</h1>
+    </div>
+    <div>
+      <h1>we create</h1>
+      <h2>Customised solutions </h2>
+      <h1>with</h1>
+      <h2>State of the art tech </h2>
+    </div>
+    
+
+  </section>
 </body>
 
 </html>
