--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -540,7 +540,7 @@
   <div class="scroll-container projects-container">
     <ul class="grid">
       <li>
-        <a href="#">
+        <a href="#infrared">
           <picture>
             <source srcset="./images/optimized/infrared_medium.webp" type="image/webp">
             <source srcset="./images/optimized/infrared_medium.jpg" type="image/jpeg">
@@ -550,7 +550,17 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="#internetOfBuildings">
+          <picture>
+            <source srcset="./images/optimized/iob_medium.webp" type="image/webp">
+            <source srcset="./images/optimized/iob_medium.jpg" type="image/jpeg">
+            <img src="./images/optimized/.jpg" alt="internetOfBuildings" loading="lazy">
+          </picture>
+          <span class="project-title" id="internetOfBuildings">Internet of Buildings</span>
+        </a>
+      </li>
+      <li>
+        <a href="#perceptiveDatascapes">
           <picture>
             <source srcset="./images/optimized/perspective_datascapes_medium.webp" type="image/webp">
             <source srcset="./images/optimized/perspective_datascapes_medium.jpg" type="image/jpeg">
@@ -560,7 +570,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="#rawbot">
           <picture>
             <source srcset="./images/optimized/Rawbot_medium.webp" type="image/webp">
             <source srcset="./images/optimized/Rawbot_medium.jpg" type="image/jpeg">
@@ -571,18 +581,18 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="#geoGraphics">
           <picture>
             <source srcset="./images/optimized/ligthing_medium.webp" type="image/webp">
             <source srcset="./images/optimized/ligthing_medium.jpg" type="image/jpeg">
             <img src="./images/optimized/ligthing_medium.jpg" alt="geospatial infographics" loading="lazy">
           </picture>
 
-          <span class="project-title" id="geospatial">Geospatial Infographics</span>
+          <span class="project-title" id="geospatial">Geo-Graphics</span>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="#Swapper">
           <picture>
             <source srcset="./images/optimized/Swapper(36)_medium.webp" type="image/webp">
             <source srcset="./images/optimized/Swapper(36)_medium.jpg" type="image/jpeg">
@@ -593,7 +603,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="#urbanGrowth">
           <picture>
             <source srcset="./images/optimized/frames_medium.webp" type="image/webp">
             <source srcset="./images/optimized/frames_medium.jpg" type="image/jpeg">
@@ -603,6 +613,9 @@
           <span class="project-title" id="urban-growth">Urban Growth</span>
         </a>
       </li>
+      <li> </li>
+      <li> </li>
+
 
 
     </ul>
@@ -622,39 +635,120 @@
       <div class="popup-content">
         <h2 class='popup-title'>InFraReD</h2>
       </div>
+      <div class="popup-quote">
+        <h3>" Unlock the <br> potentials of <br>environmental <br> analysis "</h3>
+      </div>
       <div class="video-parent" style="--aspect-ratio: 16/9;">
         <iframe src="https://player.vimeo.com/video/525248928" width="640" height="360" frameborder="0"
           allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <p class='popup-description'></p>
+      <div class='popup-description'>
+        <p>
+          InFraReD is a platform for intelligent and resilient urban design based on Artificial
+          Intelligence. Utilising state of the art machine learning models, it can provide real-time feedback on the
+          performance of your designs and guide your decisions at every step of the process. InFraReD
+          currently provides feedback on solar, sunlight and wind performance but more analyses are coming
+          soon.
+        </p>
+        <p>
+          Users can select a location around the world and design different layouts in 3D. The feasibility studies can
+          be then tested against the machine learning algorithms. The results of the analyses are visualised through
+          graphs and 3D representations and are available for comparison across different projects.
+        </p>
+      </div>
+      <div class="project-utils">
+        <p> <span>
+            <<< </span>PREVIOUS PROJECT</p>
+        <p>NEXT PROJECT <span>>>></span></p>
+      </div>
       <div class="share-project">
-        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook"> </a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook">
+        </a>
         <a target="_blank" alt="Tweet this page" class="fa fa-twitter twitter-share-button"
           href="https://twitter.com/intent/tweet?text=DecodeCreative&hashtags=decodeCreative" data-size="large"></a>
         <p>Decode Creative / 2020</p>
       </div>
+
+    </div>
+
+    <div class="project-popup hidden" id="internetOfBuildings-desc">
+      <div class="popup-content">
+        <h2 class='popup-title'>Internet of Buildings</h2>
+      </div>
+      <div class="popup-quote">
+        <h3>" Geo-spatial data <br>visualisation interface "</h3>
+      </div>
+      <div class="video-parent" style="--aspect-ratio: 16/9;">
+        <iframe src="https://player.vimeo.com/video/525248928" width="640" height="360" frameborder="0"
+          allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class='popup-description'>
+        <p>
+          IOB web app is a platform developed for internet of buildings programme. The studio is part of IAAC’s MaCT course and
+          combines computational urban design, data analytics, integrated simulation
+          and interactive interfaces to understand and propose solutions for the future challenges of our cities.
+          The app offers a framework of visualisation in 3D space for the students' projects.         
+        </p>
+        <p>
+          The projects attempt a holistic analysis for Barcelona’s Poblenou district, working in as a transdisciplinary
+          team. The research is organised in discrete but interconnected clusters which address key future challenges
+          that inform this collective interface. The five research clusters follow a multi-layered, multi-scalar and
+          inter-temporal methodology.
+        </p>
+      </div>
+      <div class="project-utils">
+        <p> <span>
+            <<< </span>PREVIOUS PROJECT</p>
+        <p>NEXT PROJECT <span>>>></span></p>
+      </div>
+      <div class="share-project">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook">
+        </a>
+        <a target="_blank" alt="Tweet this page" class="fa fa-twitter twitter-share-button"
+          href="https://twitter.com/intent/tweet?text=DecodeCreative&hashtags=decodeCreative" data-size="large"></a>
+        <p>Decode Creative / 2020</p>
+      </div>
+
     </div>
 
     <div class="project-popup hidden" id="perceptive-datascapes-desc">
       <div class="popup-content">
         <h2 class='popup-title'>Perceptive Datascapes</h2>
       </div>
+      <div class="popup-quote">
+        <h3>" Data driven design <br> based on visual <br> connectivity principles "</h3>
+      </div>
       <div class="video-parent" style="--aspect-ratio: 16/9;">
         <iframe src="https://player.vimeo.com/video/525248928" width="640" height="360" frameborder="0"
           allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <p class='popup-description'>This project explores the potentials of data driven design on building and
-        landscape level as a seemless structure. The aim is to explore the
-        possibility of
-        developping a work-flow which changes a given structure based on an input set of data. In this case we
-        experiment on
-        the application of certain patterns which are shaped and reformed based on data evaluation and
-        optimisation processes</p>
+      <div class='popup-description'>
+        <p>
+          This project explores the potentials of data driven design on building and
+          landscape level as a seemless structure. The aim is to explore the
+          possibility of
+          developping a work-flow which changes a given structure based on an input set of data. In this case we
+          experiment on
+          the application of certain patterns which are shaped and reformed based on data evaluation and
+          optimisation processes.
+        </p>
+        <p>
+          The algorithm is constantly re-evaluating the result and identifies areas that need amendments. The evaluation
+          process is build upon principles of physical and visual connectivity estimating the permeability and porosity
+          of the resulted space.
+        </p>
+      </div>
+      <div class="project-utils">
+        <p> <span>
+            <<< </span>PREVIOUS PROJECT</p>
+        <p>NEXT PROJECT <span>>>></span></p>
+      </div>
       <div class="share-project">
-        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook"> </a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook">
+        </a>
         <a target="_blank" alt="Tweet this page" class="fa fa-twitter twitter-share-button"
           href="https://twitter.com/intent/tweet?text=DecodeCreative&hashtags=decodeCreative" data-size="large"></a>
-        <p>Decode Creative / 2018</p>
+        <p>Decode Creative / 2020</p>
       </div>
     </div>
 
@@ -663,7 +757,7 @@
         <h2 class='popup-title'>Rawbot</h2>
       </div>
       <div class="popup-quote">
-        <h3>" Build your home <br> with AR "</h3>
+        <h3>" Build your bamboo <br> home with AR "</h3>
       </div>
       <div class="video-parent" style="--aspect-ratio: 16/9;">
         <iframe src="https://player.vimeo.com/video/525248928" width="640" height="360" frameborder="0"
@@ -688,17 +782,26 @@
         </p>
 
       </div>
+      <div class="project-utils">
+        <p> <span>
+            <<< </span>PREVIOUS PROJECT</p>
+        <p>NEXT PROJECT <span>>>></span></p>
+      </div>
       <div class="share-project">
-        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook"> </a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook">
+        </a>
         <a target="_blank" alt="Tweet this page" class="fa fa-twitter twitter-share-button"
           href="https://twitter.com/intent/tweet?text=DecodeCreative&hashtags=decodeCreative" data-size="large"></a>
-        <p>Decode Creative / 2018</p>
+        <p>Decode Creative / 2020</p>
       </div>
     </div>
 
     <div class="project-popup hidden" id="geospatial-desc">
       <div class="popup-content">
         <h2 class='popup-title'>Geo-Graphics</h2>
+      </div>
+      <div class="popup-quote">
+        <h3>" Urban Networks <br> and Machine Intuition "</h3>
       </div>
       <div class="video-parent" style="--aspect-ratio: 16/9;">
         <iframe src="https://player.vimeo.com/video/525248928" width="640" height="360" frameborder="0"
@@ -719,28 +822,48 @@
           challenge the way people perceive the urban fabric.
         </p>
       </div>
+      <div class="project-utils">
+        <p> <span>
+            <<< </span>PREVIOUS PROJECT</p>
+        <p>NEXT PROJECT <span>>>></span></p>
+      </div>
       <div class="share-project">
-        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook"> </a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook">
+        </a>
         <a target="_blank" alt="Tweet this page" class="fa fa-twitter twitter-share-button"
           href="https://twitter.com/intent/tweet?text=DecodeCreative&hashtags=decodeCreative" data-size="large"></a>
-        <p>Decode Creative / 2017</p>
+        <p>Decode Creative / 2020</p>
       </div>
+
     </div>
 
     <div class="project-popup hidden" id="swapper-desc">
       <div class="popup-content">
         <h2 class='popup-title'>Swapper</h2>
       </div>
+      <div class="popup-quote">
+        <h3>" Real time materials <br> and lighting conditions "</h3>
+      </div>
       <div class="video-parent" style="--aspect-ratio: 16/9;">
         <iframe src="https://player.vimeo.com/video/525248928" width="640" height="360" frameborder="0"
           allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <p class='popup-description'></p>
+      <div class='popup-description'>
+        <p>
+          
+        </p>
+      </div>
+      <div class="project-utils">
+        <p> <span>
+            <<< </span>PREVIOUS PROJECT</p>
+        <p>NEXT PROJECT <span>>>></span></p>
+      </div>
       <div class="share-project">
-        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook"> </a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook">
+        </a>
         <a target="_blank" alt="Tweet this page" class="fa fa-twitter twitter-share-button"
           href="https://twitter.com/intent/tweet?text=DecodeCreative&hashtags=decodeCreative" data-size="large"></a>
-        <p>Decode Creative / 2019</p>
+        <p>Decode Creative / 2020</p>
       </div>
     </div>
 
@@ -748,42 +871,42 @@
       <div class="popup-content">
         <h2 class='popup-title'>Urban Growth</h2>
       </div>
+      <div class="popup-quote">
+        <h3>" The seeds of <br> future urban <br> regeneration "</h3>
+      </div>
       <div class="video-parent" style="--aspect-ratio: 16/9;">
         <iframe src="https://player.vimeo.com/video/525248928" width="640" height="360" frameborder="0"
           allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <p class='popup-description'>
-        This project is considered as an exercise trying to explore
-        new ways of predicting future evolution of the urban tissue.
-        By gathering data indicating any sort of activity, the estmated
-        areas of urban development are established. The studied data
-        layers derive from various sources and illustrate potential of
-        movement, presence of many people and latest constructions.
-        These areas constitute the seeds of future urban regeneration.
-        Therefore, cellular automata are used as a generative algorithm
-        that by changing the rules of growth according to spatial
-        characteristics, a potential estimation of how the city might
-        look like in the future is investigated. These structures are a
-        diagramatic representation of density of activity. In other words,
-        they could represent the bounding box for building volumes. As,
-        soon as the generation is completed the resulted configuration
-        is excavated in areas where public amenities are met. However,
-        the overall volume is retained as the excavated parts are
-        regenerated in other available positions. The final result depicts
-        an estimation of one of many version of urban development.
-      </p>
+      <div class='popup-description'>
+        <p>
+          This project is considered as an exercise on predicting future evolution of the urban tissue.
+          By gathering data indicating any sort of activity, the estimated
+          areas of urban development are established. The studied data
+          layers derive from various sources and illustrate potential of
+          movement, presence of people and latest constructions.
+        </p>
+        <p>
+          Cellular automata are used as a generative algorithm
+          where by changing the rules of growth according to spatial
+          characteristics, a potential estimation of future cities is investigated. These structures are a
+          diagramatic representation of density of activity. In other words,
+          they represent the bounding box for building volumes.
+        </p>
+      </div>
+      <div class="project-utils">
+        <p> <span>
+            <<< </span>PREVIOUS PROJECT</p>
+        <p>NEXT PROJECT <span>>>></span></p>
+      </div>
       <div class="share-project">
-        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook"> </a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank" class="fa fa-facebook">
+        </a>
         <a target="_blank" alt="Tweet this page" class="fa fa-twitter twitter-share-button"
           href="https://twitter.com/intent/tweet?text=DecodeCreative&hashtags=decodeCreative" data-size="large"></a>
-        <p>Decode Creative / 2017</p>
+        <p>Decode Creative / 2020</p>
       </div>
     </div>
-
-
-
-
-
   </div>
   <!-- <div class="counter">
     <h6 id="current-project">1</h6>
