--- a/DecodeCollective/about.html
+++ b/DecodeCollective/about.html
@@ -525,25 +525,21 @@
     </nav>
   </div>
   <section class="main-container">
-    <div style="display: flex; align-items: baseline; justify-content: center;">
+    <div></div>
+    <div style="display: flex;  align-items: baseline; z-index: 10; padding-left: 5vw;">
       <h1 class="brand-subtitle">we are &nbsp;</h1>
-      <h1 class="brand-title">Decode Creative</h1>
+      <!-- <h1 class="brand-title">Decode Creative</h1> -->
     </div>
     <div class="content">
       <h2 class="brand-subtitle" style="align-self: center;">we create</h1>
-        <h1 style="align-self: baseline; background-color: rgb(220, 122, 255);" class="slide-top-start coloured-title">
+        <h1 style="align-self: baseline; color: white; background-color: rgba(220, 122, 255, 0);" class="slide-top-start coloured-title">
           Customised solutions </h1>
         <h2 class="brand-subtitle" style="align-self: flex-end;">with</h2>
-        <h1 style="align-self: flex-end; background-color: rgb(118, 228, 204);" class="slide-top-slow coloured-title">
+        <h1 style="align-self: flex-end; color: white; background-color: rgba(118, 228, 204, 0);" class="slide-top-slow coloured-title">
           State of the art tech </h1>
     </div>
-
-    <!-- <canvas id="swarm"> -->
-
-    </canvas>
-
-
   </section>
+  <div id="tsparticles"> </div>
 </body>
 <!-- ----------------- SCRIPTS ----------------- -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tsparticles/1.38.0/tsparticles.min.js"
